--- a/deno.jsonc
+++ b/deno.jsonc
@@ -61,7 +61,8 @@
     "bcrypt": "https://deno.land/x/bcrypt@v0.4.1/mod.ts",
     "djwt": "https://deno.land/x/djwt@v2.4/mod.ts",
     "mongo": "https://deno.land/x/mongo@v0.32.0/mod.ts",
-    "oak": "https://deno.land/x/oak@v12.6.1/mod.ts"
+    "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
+    "std/": "https://deno.land/std@0.160.0/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
