--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,7 @@
   "lock": false,
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
-    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "start": "deno run --unstable -A --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
@@ -60,9 +60,8 @@
     "$std/": "https://deno.land/std@0.193.0/",
     "bcrypt": "https://deno.land/x/bcrypt@v0.4.1/mod.ts",
     "djwt": "https://deno.land/x/djwt@v2.4/mod.ts",
-    "mongo": "https://deno.land/x/mongo@v0.32.0/mod.ts",
-    "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
-    "std/": "https://deno.land/std@0.160.0/"
+    "std/": "https://deno.land/std@0.160.0/",
+    "ulid": "https://deno.land/x/ulid@v0.3.0/mod.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
