--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,7 +3,7 @@
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "start": "deno run --unstable -A --watch=static/,routes/ dev.ts",
-    "build": "deno run -A dev.ts build",
+    "build": "deno run --unstable -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
@@ -20,14 +20,13 @@
     "exclude": [],
     "rules": {
       "tags": ["fresh", "recommended"],
-      "exclude": ["no-explicit-any"],
+      "exclude": ["no-explicit-any", "no-await-in-loop"],
       "include": [
         "ban-untagged-todo",
         "camelcase",
         "default-param-last",
         "eqeqeq",
         "guard-for-in",
-        "no-await-in-loop",
         "no-const-assign",
         "no-eval",
         "no-external-import",
