--- a/deno.jsonc
+++ b/deno.jsonc
@@ -44,14 +44,16 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "$fresh/": "https://deno.land/x/fresh@1.5.4/",
-    "$std/": "https://deno.land/std@0.206.0/",
+    "$std/": "https://deno.land/std@0.208.0/",
     "bcrypt": "https://deno.land/x/bcrypt@v0.4.1/mod.ts",
     "djwt": "https://deno.land/x/djwt@v2.4/mod.ts",
     "heap-js": "https://esm.sh/heap-js@2.3.0",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.3.1",
     "preact": "https://esm.sh/preact@10.18.1",
     "preact/": "https://esm.sh/preact@10.18.1/",
-    "ulid": "https://deno.land/x/ulid@v0.3.0/mod.ts"
+    "ulid": "https://deno.land/x/ulid@v0.3.0/mod.ts",
+    "zod": "https://deno.land/x/zod@v3.22.4/mod.ts",
+    "zod-validation-error": "https://esm.sh/zod-validation-error@2.1.0"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
