--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,7 +6,7 @@
     "build": "deno run --unstable -A dev.ts build",
     "preview": "deno run -A main.ts",
     "test": "rm -rf coverage && deno test -A --unstable --coverage=coverage && deno coverage coverage --lcov --output=coverage/lcov.info --exclude=test/database/dbUtils.ts && genhtml -o coverage/html --ignore-errors unmapped coverage/lcov.info > /dev/null",
-    "ci": "deno test --unstable -A --coverage=coverage && deno coverage coverage --lcov --output=coverage/lcov.info",
+    "ci": "deno test --unstable -A --coverage=coverage && deno coverage coverage --lcov --output=coverage/lcov.info && deno run --unstable clearDatabase.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update . && deno run -A https://deno.land/x/udd/main.ts deno.jsonc --dry-run"
   },
   "fmt": {
